--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,11 @@
 # Change passwords for production.
 
 # App uses these env vars via `mysqli_connect.php`
-MYSQL_HOST=db
-MYSQL_DATABASE=mygov
-MYSQL_USER=mygov
-MYSQL_PASSWORD=change_me_strong_password
+MYSQL_HOST=l
+MYSQL_DATABASE=l
+MYSQL_USER=l
+MYSQL_PASSWORD=l
 
 ### MariaDB container bootstrap
-MARIADB_ROOT_PASSWORD=change_me_root_password
-
+MARIADB_ROOT_PASSWORD=l
+TZ=Asia/Tashkent
